[package]
name = "mini-ambilight-bluetooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
uuid = "0.8.2"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
dxgcap = "0.2.4"
glam = "0.20.2"
color-thief = "0.2.1"
